--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,4 @@
-# enable mod_rewrite
-Options = indexes
+
+# HTID:22672030: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
+php_value display_errors 1
+# DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:22672030:
